--- a/test/testcases/test-start-time.html
+++ b/test/testcases/test-start-time.html
@@ -77,12 +77,12 @@ var animation = {left: ["100px", "300px"]};
 
 for (var i = 0; i < directions.length; i++) {
   var container = document.getElementById(containers[i]);
-  // Explicit parent duration.
+  // Explicit parent iterationDuration.
   document.timeline.play(new ParGroup(
       [new Animation(container.getElementsByClassName("a")[0], animation,
           {iterationDuration: 1.0})],
       {iterationCount: 2.0, direction: directions[i], iterationDuration: 1.0}));
-  // Parent calculates intrinsic duration.
+  // Parent calculates intrinsic iterationDuration.
   document.timeline.play(new ParGroup(
       [new Animation(container.getElementsByClassName("b")[0], animation,
           {iterationDuration: 1.0})],
