Added use strict in tests

--- a/demos/curtains.html
+++ b/demos/curtains.html
@@ -47,6 +47,7 @@ div#rightCurtain {
 
 <script src="../web-animations.js"></script>
 <script>
+"use strict";
 
 var video = document.getElementById("video");
 var leftCurtain = document.getElementById("leftCurtain");
