--- a/test/test-generator.html
+++ b/test/test-generator.html
@@ -40,6 +40,7 @@ input#iframeSrc {
 <div id = "checks"></div>
 
 <script>
+"use strict";
 
 function detectFeatures() {
   var style = document.createElement('style');
