--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -43,11 +43,13 @@ iframe {
 <iframe id="result-post-frame" src="test-results-post.html"></iframe>
 
 <script>
+"use strict";
 var tests = [];
 function testCases(new_tests) { tests = new_tests; };
 </script>
 <script src="testcases.jsonp?jsonp=testCases"></script>
 <script>
+"use strict";
 
 var finished = false;
 
