--- a/test/testcases/test-bounds.html
+++ b/test/testcases/test-bounds.html
@@ -28,6 +28,7 @@ div.anim {
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var animFunc = {left: ["100px", "200px"]};
 
