--- a/test/testcases/test-calc.html
+++ b/test/testcases/test-calc.html
@@ -114,6 +114,7 @@ completely cover the light red box when the animation has finished.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var dt = document.timeline;
 
