--- a/test/testcases/test-color-names.html
+++ b/test/testcases/test-color-names.html
@@ -31,6 +31,7 @@ td.anim {
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var colors = [
   'aliceblue',
