--- a/test/testcases/test-color.html
+++ b/test/testcases/test-color.html
@@ -59,6 +59,7 @@ All three boxes should end up the same color as the outline.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var dt = document.timeline;
 
