--- a/test/testcases/test-compositing-order.html
+++ b/test/testcases/test-compositing-order.html
@@ -30,6 +30,7 @@ div.anim {
 <script src="../../web-animations.js"></script>
 <script src="../testharness_bootstrap.js"></script>
 <script>
+"use strict";
 
 animTestRunner.waitUntilDone();
 
