--- a/test/testcases/test-dynamic-load.html
+++ b/test/testcases/test-dynamic-load.html
@@ -42,6 +42,7 @@ limitations under the License.
 
 <script src="../testharness_bootstrap.js"></script>
 <script>
+  "use strict";
   animTestRunner.waitUntilDone();
   window.addEventListener('load', function() {
     var s = document.createElement('script');
