--- a/test/testcases/test-element-animate.html
+++ b/test/testcases/test-element-animate.html
@@ -26,5 +26,6 @@ PASS
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 document.body.animate({display: 'block'}, 1);
 </script>
