--- a/test/testcases/test-grouped-anim-func.html
+++ b/test/testcases/test-grouped-anim-func.html
@@ -32,6 +32,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 var rect = document.querySelector(".anim");
 
 document.timeline.play(new Animation(rect,
