--- a/test/testcases/test-integer.html
+++ b/test/testcases/test-integer.html
@@ -30,6 +30,7 @@ position:absolute;
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 var width = 25;
 var totalWidth = 800;
 var startZ = 0;
