--- a/test/testcases/test-iteration-start.html
+++ b/test/testcases/test-iteration-start.html
@@ -119,6 +119,7 @@ reversed).</div>
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var containers = ["ca", "cb", "cc", "cd"];
 
