--- a/test/testcases/test-matrix-transforms.html
+++ b/test/testcases/test-matrix-transforms.html
@@ -66,6 +66,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 var a = document.querySelector("#a")
 var b = document.querySelector("#b")
 var c = document.querySelector("#c")
