--- a/test/testcases/test-media.html
+++ b/test/testcases/test-media.html
@@ -20,6 +20,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var video = document.getElementById("video");
 var dt = document.timeline;
