--- a/test/testcases/test-path.html
+++ b/test/testcases/test-path.html
@@ -65,6 +65,7 @@ height: 500px;
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var animFunc = new PathAnimationEffect(
     document.querySelector('#path1'));
