--- a/test/testcases/test-pause.html
+++ b/test/testcases/test-pause.html
@@ -62,6 +62,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var a1 = new Animation(document.querySelector("#a"), {left: ["100px", "200px"]},
     2.6);
