--- a/test/testcases/test-preset-timings.html
+++ b/test/testcases/test-preset-timings.html
@@ -30,6 +30,7 @@ span {
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 function testTiming(name) {
   var timingFun = TimingFunction.createFromString(name);
   var canvas = document.createElement('canvas');
