--- a/test/testcases/test-rectangle.html
+++ b/test/testcases/test-rectangle.html
@@ -36,6 +36,7 @@ position: absolute;
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 var anim = {'clip': [
   'rect(300px, 400px, 300px, 400px)',
   'rect(0px, 800px, 600px, 0px)'
