--- a/test/testcases/test-reparent.html
+++ b/test/testcases/test-reparent.html
@@ -39,6 +39,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 // Run a simple animation. It should animate indefinitely.
 var anim = new Animation(document.getElementById("a"),
