--- a/test/testcases/test-start-time-iterations.html
+++ b/test/testcases/test-start-time-iterations.html
@@ -81,6 +81,7 @@ that the position of the last element in each group is approximate.</div>
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var containers = ["ca", "cb", "cc", "cd"];
 
