--- a/test/testcases/test-unpause.html
+++ b/test/testcases/test-unpause.html
@@ -27,6 +27,7 @@ div.anim {
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var testPauseUnpause = function(name, player) {
   player.currentTime = 5.0;
