--- a/tutorial/sample-tutorial.html
+++ b/tutorial/sample-tutorial.html
@@ -23,6 +23,7 @@
   <link type="text/css" href="../animation-test-style.css">
   <link rel="stylesheet" type="text/css" href="tutorial-style.css">
   <script>
+     "use strict";
      
     var myDisplay = new TryItDisplay(document.getElementById("myDisplayDiv"));
     myDisplay.setDefaultHtml("<div id='a' class='test'></div>");
