--- a/web-animations-test.html
+++ b/web-animations-test.html
@@ -74,6 +74,7 @@ limitations under the License.
 
 <script src="web-animations.js"></script>
 <script>
+"use strict";
 
 new Anim(document.querySelector(".anim"), {left: ["100px", "200px"]},
     {startDelay: 2, duration: 4}, undefined, 1);
