--- a/demos/car-demo.html
+++ b/demos/car-demo.html
@@ -131,6 +131,7 @@
 
 <script src="../web-animations.js"></script>
 <script>
+  "use strict";
   var lightOff = "rgb(50,50,50)";
 
   var sgroup = new SeqGroup([]);
