--- a/test/testcases/test-change-playback-rate.html
+++ b/test/testcases/test-change-playback-rate.html
@@ -35,6 +35,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 /* FIXME -
    _update: function() {
