--- a/test/testcases/test-clone.html
+++ b/test/testcases/test-clone.html
@@ -20,6 +20,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var elem = document.getElementById("anim");
 var animFunc = {left: "100px"};
