--- a/test/testcases/test-document-timeline.html
+++ b/test/testcases/test-document-timeline.html
@@ -20,6 +20,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var usePerformanceTiming =
     typeof performance === "object" &&
