--- a/test/testcases/test-fill-values.html
+++ b/test/testcases/test-fill-values.html
@@ -104,6 +104,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var containers = ["ca", "cb", "cc", "cd"];
 var directions = ["normal", "reverse", "alternate", "alternate-reverse"];
