--- a/test/testcases/test-iterations-basic.html
+++ b/test/testcases/test-iterations-basic.html
@@ -88,6 +88,7 @@ iteration (or start if reversed).</div>
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var containers = ["ca", "cb", "cc", "cd"];
 
