--- a/test/testcases/test-iterations-fill.html
+++ b/test/testcases/test-iterations-fill.html
@@ -119,6 +119,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var fillModes = ["none", "backwards", "forwards", "both"];
 var categories = [".a", ".b", ".c", ".d"]
