--- a/test/testcases/test-parent.html
+++ b/test/testcases/test-parent.html
@@ -38,6 +38,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var dt = document.timeline;
 
