--- a/test/testcases/test-player.html
+++ b/test/testcases/test-player.html
@@ -22,6 +22,7 @@ Written by Steph McArthur
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 // Don't use a local named requestAnimationFrame, to avoid potential problems
 // with hoisting.
