--- a/test/testcases/test-start-time.html
+++ b/test/testcases/test-start-time.html
@@ -67,6 +67,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var containers = ["ca", "cb"];
 
