--- a/test/testcases/test-text-shadow.html
+++ b/test/testcases/test-text-shadow.html
@@ -19,6 +19,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 document.timeline.play(new Animation(document.body,
     {'textShadow': ['100px 100px red, 0px 100px 10px red', '0px 0px']}, 2));
 </script>
