--- a/test/testcases/test-timing-functions.html
+++ b/test/testcases/test-timing-functions.html
@@ -53,6 +53,7 @@ body { margin: 0px; }
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 document.timeline.play(new Animation(document.querySelector("#a"),
     {left: "200px"}, {startDelay: 1, duration: 2}));
