--- a/test/testcases/test-to-animation.html
+++ b/test/testcases/test-to-animation.html
@@ -70,6 +70,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var divs = document.querySelectorAll(".anim");
 
