--- a/test/testcases/test-transform-primitives.html
+++ b/test/testcases/test-transform-primitives.html
@@ -36,6 +36,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 
 var transformValues = [
   ['translate(0px)', 'translate(30px)', 'translate(20px, 40px)',
@@ -115,5 +116,6 @@ for (var i = 0; i < transformValues.length; i++) {
 
 </script>
 <script>
+"use strict";
 animations.forEach(function(anim) { document.timeline.play(anim); });
 </script>
