--- a/test/testcases/test-wrapping-bug.html
+++ b/test/testcases/test-wrapping-bug.html
@@ -30,6 +30,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use strict";
 var group = new ParGroup();
 document.timeline.play(new ParGroup([
     new Animation(overflow,
