--- a/test/testcases/test-modify-timing-params.html
+++ b/test/testcases/test-modify-timing-params.html
@@ -29,7 +29,7 @@ var anim = new Animation(document.getElementById("anim"), {left: "100px"},
 // cause corresponding updates to its endTime.
 test(function() {assert_equals(anim.endTime,  1.0)},
      "Incorrect endTime");
-anim.startTime = 2.0;
+try { anim.startTime = 2.0; } catch (error) { }
 test(function() {assert_equals(anim.startTime,  0.0)},
      "startTime should be read only");
 anim.timing.duration = 3.0;
@@ -42,8 +42,7 @@ anim.animationDuration = 5.0;
 test(function() {assert_equals(anim.endTime,  5.0)},
      "endTime does not reflect animationDuration");
 
-// Test that TimedItem.endTime is read-only.
-anim.endTime = 6.0;
+try { anim.endTime = 6.0; } catch (error) { }
 test(function() {assert_equals(anim.endTime,  5.0)},
      "TimedItem.endTime should be read-only");
 
